<resources>
    <string name="app_name">MyRegister</string>
    <string name="action_settings">Settings</string>
    <string name="Username">username</string>
    <string name="Password">password</string>
    <string name="Login">login</string>

    <string name="Register">register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="name">Name</string>
    <string name="Email">Email</string>
    <string name="Address">Address</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

</resources>
